# github-analyzer-2

./: .gitignore  Cargo.toml  readme.MD
src/: data_analyzers.rs  github_data_fetchers.rs  lib.rs  octocrab_compat.rs  reports.rs  utils.rs
