[package]
name = "github-analyzer-2"
version = "0.3.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
# http_req_wasi = {version =  "0.11", features = ["wasmedge_rustls"]}
urlencoding = "2.1.3"
flowsnet-platform-sdk = "0.1.5"
log = "0.4.19"
base64 = "0.21.2"
derivative = "2.2.0"
chrono = { version = "0.4.26", features = ["serde"] }
webhook-flows = "0.4.4"
web-scraper-flows = "0.1.0"
github-flows = "0.7.0"
tiktoken-rs = "0.2.2"
async-openai-wasi = { version = "0.16.4", features = ["wasmedge-tls"] }
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
# wasmedge_rustls_api = { version = "0.1", features = [ "tokio_async" ] }
futures = "0.3.30"
octocrab_wasi = { version = "0.19.1", features = ["wasi"], default-features = false }
